2009-11-27  Martin Jambor  <mjambor@suse.cz>

PR middle-end/42006
	* tree-sra.c (get_replaced_param_substitute): Call create_tmp_var
	instead of create_tmp_var.  Set DECL_GIMPLE_REG_P to one manually
	for vector and complex types.
	(get_adjustment_for_base): Describe return value in the comment.

	* testsuite/gcc.c-torture/execute/pr42006.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154715 138bc75d-0d04-0410-961f-82ee72b054a4